tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__920810_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/920810-1.c" (c, x86_64-unknown-linux-gnu)
fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn memcpy(%arg0: void*, %arg1: void*, %arg2: u64i) -> void* [external, c, nothrow];
fn f(%arg0: rec_t*, %arg1: s32i) -> rec_t* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_t*, %arg1: s32i):
        %37 = alloca rec_t*, "clas", align 8
        %38 = alloca s32i, "size", align 4
        %39 = alloca rec_t*, "__retval", align 8
        %40 = alloca rec_t*, "child", align 8
        store %arg0, %37
        store %arg1, %38
        %41 = get_global @malloc : ((u64i) -> void*)*
        %42 = load %38 : s32i, align 4
        %43 = cast(integral) %42 : u64i
        %44 = call @malloc(%43) : void* [all]
        %45 = cast(bitcast) %44 : rec_t*
        store %45, %40, align 8
        %46 = get_global @memcpy : ((void*, void*, u64i) -> void*)*
        %47 = load %40 : rec_t*, align 8
        %48 = cast(bitcast) %47 : void*
        %49 = load %37 : rec_t*, align 8
        %50 = cast(bitcast) %49 : void*
        %51 = load %37 : rec_t*, align 8
        %52 = get_member %51[2] "size" : s32i*
        %53 = load %52 : s32i, align 4
        %54 = cast(integral) %53 : u64i
        %55 = call @memcpy(%48, %50, %54) : void* [all]
        %56 = load %37 : rec_t*, align 8
        %57 = cast(bitcast) %56 : void*
        %58 = load %40 : rec_t*, align 8
        %59 = get_member %58[0] "super" : void**
        store %57, %59, align 8
        %60 = const 0 : s32i
        %61 = load %40 : rec_t*, align 8
        %62 = get_member %61[1] "name" : s32i*
        store %60, %62, align 8
        %63 = load %38 : s32i, align 4
        %64 = load %40 : rec_t*, align 8
        %65 = get_member %64[2] "size" : s32i*
        store %63, %65, align 4
        %66 = load %40 : rec_t*, align 8
        store %66, %39
        %67 = load %39 : rec_t*
        return %67
}
fn memset(%arg0: void*, %arg1: s32i, %arg2: u64i) -> void* [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_t, "foo", align 8
    %2 = alloca rec_t*, "bar", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @memset : ((void*, s32i, u64i) -> void*)*
    %5 = cast(bitcast) %1 : void*
    %6 = const 37 : s32i
    %7 = const 16 : u64i
    %8 = call @memset(%5, %6, %7) : void* [all]
    %9 = const 16 : s32i
    %10 = get_member %1[2] "size" : s32i*
    store %9, %10, align 4
    %11 = const 16 : s32i
    %12 = call @f(%1, %11) : rec_t* [all]
    store %12, %2, align 8
    scope {
        %16 = load %2 : rec_t*, align 8
        %17 = get_member %16[0] "super" : void**
        %18 = load %17 : void*, align 8
        %19 = cast(bitcast) %1 : void*
        %20 = cmp ne %18, %19 : bool
        %21 = ternary %20 ? { : bool
            %36 = const #true : bool
            yield %36
        } : {
            %31 = load %2 : rec_t*, align 8
            %32 = get_member %31[1] "name" : s32i*
            %33 = load %32 : s32i, align 8
            %34 = const 0 : s32i
            %35 = cmp ne %33, %34 : bool
            yield %35
        }
        %22 = ternary %21 ? { : bool
            %30 = const #true : bool
            yield %30
        } : {
            %24 = load %2 : rec_t*, align 8
            %25 = get_member %24[2] "size" : s32i*
            %26 = load %25 : s32i, align 4
            %27 = cast(integral) %26 : u64i
            %28 = const 16 : u64i
            %29 = cmp ne %27, %28 : bool
            yield %29
        }
        if %22 {
            %23 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %13 = get_global @exit : ((s32i) -> void)*
    %14 = const 0 : s32i
    call @exit(%14) [all]
    %15 = load %0 : s32i
    return %15
}
