tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__921019_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/921019-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[2] = "X" [cir_private, default, align 1, dso_local, constant]
global foo : void*[1] = [@.str] [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = const 0 : s64i
        %6 = const 0 : s64i
        %7 = get_global @foo : void*[1]*
        %8 = get_element %7[%6] : void**
        %9 = load %8 : void*, align 8
        %10 = cast(bitcast) %9 : s8i*
        %11 = ptr_stride %10, %5 : s8i*
        %12 = load %11 : s8i, align 1
        %13 = cast(integral) %12 : s32i
        %14 = const 88 : s32i
        %15 = cmp ne %13, %14 : bool
        if %15 {
            %16 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
