tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__921113_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/921113-1.c" (c, x86_64-unknown-linux-gnu)
global pos : rec_vector_t[1] = zero [external, default, align 4, dso_local]
global limit : rec_vector_t[2] = [zero, {1.000000e+00, 1.000000e+00}] [external, default, align 16, dso_local]

fn w(%arg10: float, %arg11: float) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg10: float, %arg11: float):
        %96 = alloca float, "x", align 4
        %97 = alloca float, "y", align 4
        store %arg10, %96
        store %arg11, %97
        return
}
fn abort() -> void [external, c, nothrow];
fn f1(%arg8: float, %arg9: float) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg8: float, %arg9: float):
        %83 = alloca float, "x", align 4
        %84 = alloca float, "y", align 4
        store %arg8, %83
        store %arg9, %84
        scope {
            %85 = load %83 : float, align 4
            %86 = const 0 : s32i
            %87 = cast(int_to_float) %86 : float
            %88 = cmp ne %85, %87 : bool
            %89 = ternary %88 ? { : bool
                %95 = const #true : bool
                yield %95
            } : {
                %91 = load %84 : float, align 4
                %92 = const 0 : s32i
                %93 = cast(int_to_float) %92 : float
                %94 = cmp ne %91, %93 : bool
                yield %94
            }
            if %89 {
                %90 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn f2(%arg6: float, %arg7: float) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg6: float, %arg7: float):
        %70 = alloca float, "x", align 4
        %71 = alloca float, "y", align 4
        store %arg6, %70
        store %arg7, %71
        scope {
            %72 = load %70 : float, align 4
            %73 = const 1 : s32i
            %74 = cast(int_to_float) %73 : float
            %75 = cmp ne %72, %74 : bool
            %76 = ternary %75 ? { : bool
                %82 = const #true : bool
                yield %82
            } : {
                %78 = load %71 : float, align 4
                %79 = const 1 : s32i
                %80 = cast(int_to_float) %79 : float
                %81 = cmp ne %78, %80 : bool
                yield %81
            }
            if %76 {
                %77 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn gitter(%arg0: s32i, %arg1: rec_vector_t*, %arg2: rec_struct_list*, %arg3: s32i*, %arg4: rec_vector_t*, %arg5: float) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: rec_vector_t*, %arg2: rec_struct_list*, %arg3: s32i*, %arg4: rec_vector_t*, %arg5: float):
        %14 = alloca s32i, "count", align 4
        %15 = alloca rec_vector_t*, "pos", align 8
        %16 = alloca rec_struct_list*, "list", align 8
        %17 = alloca s32i*, "nww", align 8
        %18 = alloca rec_vector_t*, "limit", align 8
        %19 = alloca float, "r", align 4
        %20 = alloca float, "d", align 4
        %21 = alloca s32i[128][128], "gitt", align 16
        store %arg0, %14
        store %arg1, %15
        store %arg2, %16
        store %arg3, %17
        store %arg4, %18
        store %arg5, %19
        %22 = const 0 : s64i
        %23 = load %18 : rec_vector_t*, align 8
        %24 = ptr_stride %23, %22 : rec_vector_t*
        %25 = get_member %24[0] "x" : float*
        %26 = load %25 : float, align 4
        %27 = const 0 : s64i
        %28 = load %18 : rec_vector_t*, align 8
        %29 = ptr_stride %28, %27 : rec_vector_t*
        %30 = get_member %29[1] "y" : float*
        %31 = load %30 : float, align 4
        call @f1(%26, %31) [all]
        %32 = const 1 : s64i
        %33 = load %18 : rec_vector_t*, align 8
        %34 = ptr_stride %33, %32 : rec_vector_t*
        %35 = get_member %34[0] "x" : float*
        %36 = load %35 : float, align 4
        %37 = const 1 : s64i
        %38 = load %18 : rec_vector_t*, align 8
        %39 = ptr_stride %38, %37 : rec_vector_t*
        %40 = get_member %39[1] "y" : float*
        %41 = load %40 : float, align 4
        call @f2(%36, %41) [all]
        %42 = const 0 : s32i
        %43 = load %17 : s32i*, align 8
        store %42, %43, align 4
        %44 = const 0 : s64i
        %45 = load %15 : rec_vector_t*, align 8
        %46 = ptr_stride %45, %44 : rec_vector_t*
        %47 = get_member %46[0] "x" : float*
        %48 = load %47 : float, align 4
        store %48, %20, align 4
        scope {
            %49 = load %20 : float, align 4
            %50 = cast(floating) %49 : double
            %51 = const 0.000000e+00 : double
            %52 = cmp le %50, %51 : bool
            if %52 {
                %53 = load %20 : float, align 4
                %54 = load %19 : float, align 4
                call @w(%53, %54) [all]
                scope {
                    %55 = load %20 : float, align 4
                    %56 = cast(floating) %55 : double
                    %57 = load %19 : float, align 4
                    %58 = cast(floating) %57 : double
                    %59 = const 5.000000e-01 : double
                    %60 = fmul %58, %59 : double
                    %61 = cmp le %56, %60 : bool
                    if %61 {
                        %62 = load %20 : float, align 4
                        %63 = load %19 : float, align 4
                        call @w(%62, %63) [all]
                        %64 = const 1 : s32i
                        %65 = cast(int_to_float) %64 : float
                        %66 = const 0 : s64i
                        %67 = load %16 : rec_struct_list*, align 8
                        %68 = ptr_stride %67, %66 : rec_struct_list*
                        %69 = get_member %68[0] "wsx" : float*
                        store %65, %69, align 4
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "nww", align 4
    %2 = alloca rec_struct_list, "list", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 1 : s32i
    %5 = get_global @pos : rec_vector_t[1]*
    %6 = cast(array_to_ptrdecay) %5 : rec_vector_t*
    %7 = get_global @limit : rec_vector_t[2]*
    %8 = cast(array_to_ptrdecay) %7 : rec_vector_t*
    %9 = const 1.000000e+00 : double
    %10 = cast(floating) %9 : float
    call @gitter(%4, %6, %2, %1, %8, %10) [all]
    %11 = get_global @exit : ((s32i) -> void)*
    %12 = const 0 : s32i
    call @exit(%12) [all]
    %13 = load %0 : s32i
    return %13
}
